
syntax = "proto3";

package fn;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Fn {
  rpc ListFunctions(google.protobuf.Empty) returns (ListFunctionsReply) {}
  rpc DeployFunction(DeployFunctionRequest) returns (google.protobuf.Empty) {}
  rpc DeleteFunction(DeleteFunctionRequest) returns (google.protobuf.Empty) {}
}

message ListFunctionsReply {
  repeated Function functions = 1;
}

message Function {
  string name = 1;
  string call = 2;
  string trigger = 3;
  string method = 4;

  // Output only.
  google.protobuf.Timestamp created_at = 5;
}

message DeployFunctionRequest {
  Function function = 1;
}

message DeleteFunctionRequest {
  string name = 1;
}
